# Haerujil24

./: .gitignore  README.md  WorkLists  env_install_guide
app/common_lib/: .env  .gitignore  build.sh  pyproject.toml  readme.me  requirements.txt
app/common_lib/common_lib/Config/: ConfigLoader.py
app/common_lib/common_lib/Deploy/: Dockerfile
app/common_lib/common_lib/Dtos/: S3Dto.py
app/common_lib/common_lib/S3/: S3Helper.py
app/common_lib/common_lib/Utils/: FileUtils.py  Singleton.py
app/dataset_builder/: requirements.txt
app/dataset_builder/Deploy/: Dockerfile
app/serving/: ServingServer.py  config.ini  defines.py  readme.me  requirements.txt  start.sh
app/serving/Config/: ConfigDefines.py  ConfigHelper.py  ConfigLoader.py
app/serving/Controller/: IController.py  ServingController.py
app/serving/Defines/: IEnum.py  defines.py
app/serving/Defs/: IEnum.py
app/serving/Deploy/: DockerFile
app/serving/Dtos/: IDto.py  S3Dto.py
app/serving/Inference/: InferenceManager.py
app/serving/InferenceModel/: InferenceModelManager.py
app/serving/Models/: Model.py  RestModel.py
app/serving/S3/: S3Helper.py
app/serving/Service/: Service.py  ServingService.py
app/serving/Utils/: FileUtils.py  Singleton.py
app/training/: .gitignore  requirements.txt
app/training/testCode/: train.py
infra/minio/: docker-compose.yaml
infra/mlflow/: Dockerfile  docker-compose.yaml  start.sh
infra/nexus/: docker-compose.yaml  start.sh
