[build-system]
requires = [
  "setuptools>=68",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "haerujil-common-lib"
version = "0.1.2"
description = "Haerujil24 common shared library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Haerujil24" }
]

# ✅ 공용 라이브러리에서 실제로 import 해서 사용하는 최소 의존성만
dependencies = [
  "boto3>=1.34,<2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common_lib*"]

